# otterbot

./: Cargo.toml  Dockerfile  config.json
src/: config.rs  data.rs  lib.rs  main.rs  message.rs
