[package]
name = "otterbot"
version = "0.1.0"
authors = ["Kyle Gretchev <kgretchev@gmail.com>"]

[dependencies]
diesel = { version = "1.3.2", features = ["sqlite"] }
hipchat = { git = "https://github.com/devnought/hipchat.git" }
rouille = "2.1.0"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
