[package]
name = "otterbot"
version = "0.1.0"
authors = ["Kyle Gretchev <kgretchev@gmail.com>"]

[dependencies]
hipchat = { git = "https://github.com/devnought/hipchat.git" }
lazy_static = "1.0.2"
rand = "0.5.4"
regex = "1.0.2"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
url = "1.7.1"
warp = "0.1.1"
