[package]
name = "otterbot"
version = "0.1.0"
authors = ["Kyle Gretchev <kgretchev@gmail.com>"]

[dependencies]
hipchat = { git = "https://github.com/devnought/hipchat.git" }
lazy_static = "1.1.0"
rand = "0.5.5"
regex = "1.0.5"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
url = "1.7.1"
warp = "0.1.7"
